Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -6,6 +6,7 @@
   color: white;
   position: relative;
   margin-top: 15px;
+  margin-bottom: 15px;
   border-radius: 15px;
   box-shadow: 3px 3px 12px -2px #bfbfbf;
 }
