--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
+$red: #ff4944;
+$blue: #2494f2;
+$yellow: #ffe947;
+$orange: #ff6a14;
+$green: #31b767;
 $gray: #000000;
-$light-gray: #F4F4F4;
+$light-gray: #ddd9d9;
