--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,10 +2,10 @@
 title: Le Wagon - Middleman
 ---
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/bali');">
   <div class="banner-content">
-    <h1>Le Wagon Berlin</h1>
-    <p>Learn to code with us in Berlin</p>
+    <h1>Le Wagon Bali</h1>
+    <p>Learn to code with us in Bali</p>
     <a class="btn btn-primary btn-lg">Start now</a>
   </div>
 </div>
@@ -15,10 +15,10 @@ title: Le Wagon - Middleman
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/amsterdam');">
         <div class="card-category">Popular</div>
         <div class="card-description">
-          <h2>Le Wagon Shanghai</h2>
+          <h2>Le Wagon Amsterdam</h2>
           <p>Very cool city, the best</p>
         </div>
         <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
@@ -37,10 +37,10 @@ title: Le Wagon - Middleman
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/london');">
         <div class="card-category">Popular</div>
         <div class="card-description">
-          <h2>Le Wagon Shanghai</h2>
+          <h2>Le Wagon London</h2>
           <p>Very cool city, the best</p>
         </div>
         <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
